[tool.poetry]
name = "nspuppetmaster"
version = "0.1.0"
description = "A script to update the settings of many NationStates puppet nations"
authors = ["watarinishin <watarichanno@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
toml = "^0.10.2"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
